--- a/doc/20240614.md
+++ b/doc/20240614.md
@@ -19,3 +19,5 @@
 ### front 
 - [ ] 상품을 card 형식인지 테이블 형식인지 정함.
 - [ ] 목표가 제공 UI?
+- [ ] 검색 Flow 개편 및 연관 검색어 등록 로직 의논
+- [ ] 상세 상품 화면이 너무 비어있는 느낌이여서 연관 상품보기를 추가해야하는지 확인
