--- a/doc/20240614.md
+++ b/doc/20240614.md
@@ -23,4 +23,5 @@
 - [ ] 상세 상품 화면이 너무 비어있는 느낌이여서 연관 상품보기를 추가해야하는지 확인
 - [ ] 탈퇴화면(필수)
 - [ ] 해택화면 개발 ~6월 5주차
+- [ ] 붙여넣기에 있는 URL 쿠팡인지 확인하고 서버에 보내주는 기능 추가
 
