--- a/doc/20240620.md
+++ b/doc/20240620.md
@@ -3,6 +3,7 @@
 ### 의논
 - 가격 데이터 빠진 것 임의로 채우기
 - 연관검색어 기능? -> 검색 결과중 많이 나온 카테고리 기준으로 상위 검색 키워드 제공까지는 가능
+- 검색결과 그룹핑
   
 
 ### backend
@@ -10,11 +11,16 @@
 - [ ] 이미지 url 제공 규칙 - 임시로 aws s3 도메인 제공함
 - [ ] 관심 상품 목표가 알림 
 - [ ] 검색 데이터 정제
-- [ ] 검색 데이터 중 날짜 깨짐
+- [x] 검색 데이터 중 날짜 깨짐
 - [x] 검색 데이터 중 전일 가격 %
 - [x] 관심 관련 api 규격 정의
 - [ ] item id별 크롤링.
 - [ ] 크롤링 미대상 상품 삭제 처리
+- [ ] 인기 검색어
+- [ ] 연관 검색어
+- [ ] 긴 상품명 간략화
+- [ ] 혜택 프로세스 정의 및 api 제공
+       
 
 
 ### front 
