--- a/doc/20240628.md
+++ b/doc/20240628.md
@@ -9,11 +9,11 @@
   
 
 ### backend
-- [ ] 이미지 가져올 때 해상도 높게해서 가져오기
+- [x] 이미지 가져올 때 해상도 높게해서 가져오기
 - [ ] 회원 가입 / 로그인 api 재구성
 - [ ] 관심 상품 목표가 알림 
 - [ ] item id별 크롤링.
-- [ ] 인기 검색어
+- [x] 인기 검색어
 - [ ] 연관 검색어
 - [ ] 긴 상품명 간략화
 - [ ] 혜택 프로세스 정의 및 api 제공
