--- a/doc/로톡상담.md
+++ b/doc/로톡상담.md
@@ -1,7 +1,10 @@
+상품 가격추이 제공 어플
 
-1. 우선 크롤링이 대부분 불법인데 쿠팡같은 경우 예외적으로 봐도 되는지
-  - 문제없음.
+1. 쿠팡 사이트를 스크래핑 해서 가격정보를 가지고 있어도 되는지.
 2. 개인정보처리 방침에 대한 것
+  - 약관동의를 얻고 휴대폰 번호를 db에 저장하고 있을 예정.
 3. 지적재산권 (폴센트와 비교)
-4. 키프티쇼 법인 이슈
+  - ?
+4. 기프티쇼 법인 이슈
+  - ?
  
