--- a/doc/로톡상담.md
+++ b/doc/로톡상담.md
@@ -1,10 +1,10 @@
-상품 가격추이 제공 어플
+상품 가격추이 제공 어플 - 이하 가격노트
 
 1. 쿠팡 사이트를 스크래핑 해서 가격정보를 가지고 있어도 되는지.
 2. 개인정보처리 방침에 대한 것
   - 약관동의를 얻고 휴대폰 번호를 db에 저장하고 있을 예정.
 3. 지적재산권 (폴센트와 비교)
-  - ?
+  - 폴센트라는 비슷한 어플이 있는데, 혹시나 폴센트의 지적재산권 침해 문제로 넘어갈 수 있는지.
 4. 기프티쇼 법인 이슈
-  - ?
+  - 가격노트 통해서 구매한 고객들에게 기프티쇼를 전송 할 것인데, 문제가 되는지?
  
