--- a/doc/로톡상담.md
+++ b/doc/로톡상담.md
@@ -6,5 +6,5 @@
 3. 지적재산권 (폴센트와 비교)
   - 폴센트라는 비슷한 어플이 있는데, 혹시나 폴센트의 지적재산권 침해 문제로 넘어갈 수 있는지.
 4. 기프티쇼 법인 이슈
-  - 가격노트 통해서 구매한 고객들에게 기프티쇼를 전송 할 것인데, 문제가 되는지?
+  - 가격노트 통해서 구매한 고객들에게 기프티쇼를 전송 할 것인데, 기프티쇼는 법인 명의로 가입 할 예정임. 문제가 되는지?
  
