--- a/doc/로톡상담.md
+++ b/doc/로톡상담.md
@@ -1,10 +1,21 @@
 상품 가격추이 제공 어플 - 이하 가격노트
 
-1. 쿠팡 사이트를 스크래핑 해서 가격정보를 가지고 있어도 되는지.
-2. 개인정보처리 방침에 대한 것
-  - 약관동의를 얻고 휴대폰 번호를 db에 저장하고 있을 예정.
-3. 지적재산권 (폴센트와 비교)
-  - 폴센트라는 비슷한 어플이 있는데, 혹시나 폴센트의 지적재산권 침해 문제로 넘어갈 수 있는지.
-4. 기프티쇼 법인 이슈
-  - 가격노트 통해서 구매한 고객들에게 기프티쇼를 전송 할 것인데, 기프티쇼는 법인 명의로 가입 할 예정임. 문제가 되는지?
- 
+1. 쿠팡 사이트 크롤링 관련 법적 문제
+  - 쿠팡 사이트에서 상품 데이터를 크롤링하여 가격정보 및 이미지를 가져와 개인 서버에 저장하고, 이를 개인 앱에서 사용자들에게 보여줄 예정입니다.
+  - 이 앱 사용자가 특정 버튼을 눌러 쿠팡 파트너스 링크를 통해 쿠팡 앱으로 이동하여 상품을 구매하면 수수료를 받는 구조입니다.
+  - 쿠팡 데이터를 크롤링하는 것이 법적으로 문제가 될 수 있는지, 특히 데이터를 가져오지만 결국 사용자들의 엔드포인트는 쿠팡 사이트라 문제가 되지 않을 것 같은데 실제로는 법적으로 문제가 될만한 여지가 있는지 궁금합니다.
+
+2. 개인정보 처리 방침 및 휴대폰 번호 저장 관련 법적 문제
+  - 개인 앱에서 사용자 모집을 위해 기프티콘을 주는 이벤트를 계획 중입니다. 이때 당첨자에게 기프티콘을 주기 위해 휴대폰 번호가 필요합니다.
+  - 약관 동의를 잘 준비한다면, 휴대폰 번호를 개인 서버 DB에 저장하는 것이 개인정보처리 방침 등의 정책을 위반하지 않는지 궁금합니다.
+
+3. 지적재산권 침해 문제
+   - 폴센트라는 법인에서 만든 비슷한 앱이 있습니다. 폴센트의 지적재산권 침해 문제가 발생할 가능성이 있는지 궁금합니다.
+   - 참고로, 폴센트 이전에도 유사한 개인 앱들이 몇 개 존재했던 것으로 확인되었습니다.
+  
+4. 기프티쇼를 통한 기프티콘 구매 및 전달 관련 법적 문제
+   - 기프티콘은 기프티쇼라는 사이트에서 대량 구매할 예정입니다. 이때 지인 법인 명의로 가입하여 구매할 예정입니다.
+   - 기프티쇼 가입 시 서비스 기획안을 제출해야 하는데, 해당 법인이 운영하는 공방과는 직접적인 관련이 없는 개인 앱 개발에 대한 언급은 하지 않으려고 합니다.
+   - 대신, 공방에서 별도로 이벤트를 진행할 예정이라고 기획서를 작성하고 가입한 후, 실제로는 해당 개인 앱에서 기프티콘을 사용자들에게 전달할 계획입니다.
+   - 이러한 방식으로 가입하고 기프티콘을 사용자들에게 전달하는 것이 법적으로 문제가 될 가능성이 있는지 궁금합니다.
+   - 특히, 기획안과 실제 사용 목적이 다를 경우 발생할 수 있는 법적 문제나 책임에 대해 알고 싶습니다.
