--- a/doc/ai-escape/초기기획.md
+++ b/doc/ai-escape/초기기획.md
@@ -4,6 +4,7 @@
 - AI (gpt)를 API로 이용해서 사용자들에게 텍스트 기반 방탈출을 제공한다.
 - 초반에 배경을 GPT이용해서 이미지로 제공한다.
 - 배경이 여러 개 제공 될 수 있도록 학습시킨다.
+- 초반에 보는사람에게 흥미를 끌 수 있는만큼 게임 종료시에 공유하기 버튼을 넣어서, 게임 플레이 내용을 공유 할 수 있게 만듬.
 
 ### 목표 대상
 - 오래 사용하는 어플이 아닌 만큼 어플 찍먹파들에게 제공해야한다.
