--- a/doc/ai-escape/초기기획.md
+++ b/doc/ai-escape/초기기획.md
@@ -15,7 +15,7 @@
 - 공수가 가능하다면 전체 광고 제거 결제기능을 넣는다.
     - 왜냐하면, 초반에는 흥미롭지만 플레이가 거기서 거기기때문에 금방질림.
     - 전체 광고제거 결제기능을 넣으면 사용자가 오래 사용했을 때 손해지만,
-        어차피 초반에 흥미로워서 광고제거 넣어도 금방 질릴 앱이라 오히려 이득이 될 것 같다는 판단. 3,000~ 4,900원 사이 사용자가 부담없는 금액이 되면 좋겠다는 판단임.
+        어차피 초반에 흥미로워서 사용자가 광고제거 구매해도 오래 사용하지 않을 앱이라 오히려 이득이 될 것 같다는 판단. 3,000~ 4,900원 사이 사용자가 부담없는 금액이 되면 좋겠다는 판단임.
 
 ### 리스크
 - API 사용금액이 생각보다 비쌀수도. 테스트로 플레이 해보고 예측금액 판단해야될듯.
