--- a/doc/ai-escape/초기기획.md
+++ b/doc/ai-escape/초기기획.md
@@ -24,3 +24,14 @@
 ### 구현 시 특이사항.
 - 최대한 화면수 적게 구현하는 것이 목표.
 - 회원가입 X -> (회원가입 없을 시 평생 광고제거 결제 가능여부 판단해야함. )
+
+
+----
+OPEN AI API 확인사항.
+
+- 확실한 JSON 구조를 안주기 때문에, 만든 Assistance에게 첫 시작부터 json구조를 던져야함.
+- 여러번 동일한 질문을 던져 놓고, assistance의 응답중 괜찮은 것 들을 많이 저장해 둬야함.
+    - 추후 db에 저장된 질문+ Assistance의 대답을 같이 넘겨서 여기서부터 시작될수 있도록 구성.
+    - 이렇게 되면 미리 시작부터의 이미지를 보여줄 수 있게 된다.
+- 생각보다 응답 그리는 시간이 길기 때문에... 사용자에게 이 시간동안 잡아둘 수 있는 UI를 구성해야한다. (최소 10초 ~ 길면 30초?)
+- 이미지는 생각보다 싸지만, 이미지도 그리는데 10초는 필요하다.
